--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.18.35",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "github-markdown-css": "^5.2.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,7 +50,7 @@
     "npm": "please_use_yarn_instead"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "tailwindcss": "^3.3.2"
   }
 }
