--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-markdown": "^8.0.7",
     "react-scripts": "5.0.1",
     "remark-gfm": "^3.0.1",
