--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.35",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "axios": "^1.4.0",
     "github-markdown-css": "^5.2.0",
     "prettier": "^2.8.8",
     "qrcode.react": "^3.1.0",
