--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,3 @@
 {
-  "arrowParens": "always",
-  "endOfLine": "lf",
-  "jsxSingleQuote": true,
-  "printWidth": 120,
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "all"
+  "singleQuote": true
 }
