--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.9'
 
 services:
   app:
-    image: node:18-alpine
-    container_name: 'SchoolCall_app'
+    image: node:14.21.3-alpine
+    container_name: 'MARPlify_app'
     working_dir: /app
     volumes:
       - .:/app
