--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   },
   "dependencies": {
     "@marp-team/marp-core": "^1.4.0",
-    "@material-ui/core": "^4.12.4",
     "@testing-library/dom": "^7.29.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -49,6 +48,7 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "filesafe-embed": "^1.0.10",
     "filesafe-js": "^1.0.4",
@@ -61,9 +61,12 @@
     "qrcode.react": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^4.9.0",
     "react-markdown": "^8.0.7",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.1",
+    "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
     "sn-editor-kit": "1.0.6",
     "sn-stylekit": "2.1.0",
