--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MARPlify",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "「Markdown to Marp Converter」は、Markdown形式のドキュメントをスライド形式に変換したり、逆にスライドをドキュメントに変換したりすることができるツールです。これにより、同じ文書をドキュメントとして閲覧するだけでなく、プレゼンテーションやスライドショーとしても利用することができます。",
   "keywords": [
     "Marp",
@@ -10,53 +10,27 @@
   "license": "AGPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "https://github.com/TheodoreChu/marp-editor.git"
+    "url": "https://github.com/yumekiti/Markdown_to_Marp_Converter_web"
   },
   "bugs": {
-    "url": "https://github.com/TheodoreChu/marp-editor/issues"
-  },
-  "sn": {
-    "main": "build/index.html"
+    "url": "https://github.com/yumekiti/Markdown_to_Marp_Converter_web/issues"
   },
   "homepage": ".",
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "clean-deploy-cache": "rm -rf node_modules/.cache/gh-pages",
-    "predeploy": "yarn run pretty && cp README.md public/README.txt && cp LICENSE public/LICENSE.txt && yarn run build && yarn clean-deploy-cache",
-    "deploy-build": "yarn run predeploy && gh-pages -b build -d build",
-    "deploy-dev": "yarn run predeploy && gh-pages -b dev -d build",
-    "deploy-stable": "yarn run predeploy && gh-pages -b gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve": "serve -s -p 3000 build",
-    "server-public": "http-server -p 3000 --cors",
-    "server-root": "http-server ./ -p 3000 --cors",
-    "server": "http-server ./build -p 3000 --cors",
     "pretty": "prettier --write 'src/**/*.{html,css,scss,js,jsx,ts,tsx,json}' README.md",
     "prepare": "npx husky install"
   },
   "dependencies": {
     "@marp-team/marp-core": "^1.4.0",
-    "@testing-library/dom": "^7.29.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.19",
-    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
-    "filesafe-embed": "^1.0.10",
-    "filesafe-js": "^1.0.4",
-    "gh-pages": "^3.1.0",
     "github-markdown-css": "^5.2.0",
     "husky": "^4.3.6",
-    "lint-staged": "^10.5.3",
-    "node-sass": "4.14.1",
     "prettier": "^2.2.1",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.1",
@@ -68,11 +42,7 @@
     "react-scripts": "4.0.1",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
-    "sn-editor-kit": "1.0.6",
-    "sn-stylekit": "2.1.0",
-    "source-map-explorer": "^2.5.1",
-    "typescript": "^4.1.3",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.1.3"
   },
   "eslintConfig": {
     "extends": [
