--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "prepare": "npx husky install"
   },
   "dependencies": {
-    "@marp-team/marp-core": "^1.4.0",
+    "@marp-team/marp-core": "^3.7.0",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
-    "github-markdown-css": "^5.2.0",
     "husky": "^4.3.6",
+    "markdown-it-plantuml": "^1.4.1",
     "prettier": "^2.2.1",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.1",
@@ -38,8 +38,9 @@
     "react-full-screen": "^1.1.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.3",
     "react-use": "^17.4.0",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "typescript": "^4.1.3"
   },
