--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/shortid": "^0.0.29",
     "axios": "^1.4.0",
     "husky": "^4.3.6",
     "markdown-it-plantuml": "^1.4.1",
@@ -42,6 +43,7 @@
     "react-use": "^17.4.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
+    "shortid": "^2.2.16",
     "typescript": "^4.1.3"
   },
   "eslintConfig": {
