--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@marp-team/marp-core": "^3.7.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -37,6 +38,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^8.0.7",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
     "react-use": "^17.4.0",
