--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,4 @@ jobs:
         git config --global user.email '${{ secrets.GIT_USEREMAIL }}'
         git add .argocd/deployment.yaml
         git commit --no-verify -m "Update ArgoCD version to ${DOCKER_TAG}"
-        git push origin HEAD:deploy
+        git push origin deploy
