--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,9 @@ version: '3'
 services:
   app:
     image: node:14.21.3-alpine
-    container_name: 'MARPlify_app'
     working_dir: /app
     volumes:
-      - .:/app
+      - ./web:/app
     ports:
       - '3000:3000'
     command: >
