--- a/.argocd/service.yaml
+++ b/.argocd/service.yaml
@@ -1,13 +1,28 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: marplify
+  name: web-service
   namespace: marplify
 spec:
   selector:
-    app: marplify
+    app: web
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
+  type: NodePort
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-service
+  namespace: marplify
+spec:
+  selector:
+    app: api
+  ports:
+  - protocol: TCP
+    port: 3000
+    targetPort: 3000
   type: NodePort
