--- a/.argocd/service.yaml
+++ b/.argocd/service.yaml
@@ -26,3 +26,17 @@ spec:
     port: 3000
     targetPort: 3000
   type: NodePort
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: db-service
+  namespace: marplify
+spec:
+  selector:
+    app: db
+  ports:
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
+  type: NodePort
