--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,8 @@ jobs:
         for directory in "${directories[@]}"; do
           cd $directory
           DOCKER_TAG=$(git rev-parse --short HEAD)
-          docker buildx build --tag yumekiti/marplify-$directory:${DOCKER_TAG} --file Dockerfile --platform linux/amd64,linux/arm64 --push .
+          # docker buildx build --tag yumekiti/marplify-$directory:${DOCKER_TAG} --file Dockerfile --platform linux/amd64,linux/arm64 --push .
+          docker buildx build --tag yumekiti/marplify-$directory:${DOCKER_TAG} --file Dockerfile --platform linux/arm64 --push .
           sed -i "s/yumekiti\/marplify-$directory:.*/yumekiti\/marplify-$directory:${DOCKER_TAG}/" .argocd/deployment.yaml
           cd ..
         done
