--- a/.argocd/service.yaml
+++ b/.argocd/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web-service
+  name: web
   namespace: marplify
 spec:
   selector:
@@ -16,7 +16,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-service
+  name: api
   namespace: marplify
 spec:
   selector:
@@ -30,7 +30,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: db-service
+  name: db
   namespace: marplify
 spec:
   selector:
