--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,13 @@ jobs:
       id: docker-login
       run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      id: cache-docker
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
+
     - name: Build and push Docker image
       id: build-and-push-image
       run: |
@@ -28,10 +35,9 @@ jobs:
         for directory in "${directories[@]}"; do
           cd $directory
           DOCKER_TAG=$(git rev-parse --short HEAD)
-          # docker buildx build --tag yumekiti/marplify-$directory:${DOCKER_TAG} --file Dockerfile --platform linux/amd64,linux/arm64 --push .
-          docker buildx build --tag yumekiti/marplify-$directory:${DOCKER_TAG} --file Dockerfile --platform linux/arm64 --push .
+          docker buildx build --tag yumekiti/marplify-$directory:${DOCKER_TAG} --file Dockerfile --platform linux/arm64 --push --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache
+          sed -i "s/yumekiti\/marplify-$directory:.*/yumekiti\/marplify-$directory:${DOCKER_TAG}/" ../.argocd/deployment.yaml
           cd ..
-          sed -i "s/yumekiti\/marplify-$directory:.*/yumekiti\/marplify-$directory:${DOCKER_TAG}/" .argocd/deployment.yaml
         done
 
     - name: Commit and push changes to deploy branch
