Add initContainers to deployment.yaml

--- a/.argocd/deployment.yaml
+++ b/.argocd/deployment.yaml
@@ -35,6 +35,10 @@ spec:
       labels:
         app: api
     spec:
+      initContainers:
+        - name: marplify-api-init
+          image: yumekiti/marplify-api:latest
+          command: ['sh', '-c', 'yarn keystone prisma migrate dev --name init']
       containers:
       - name: marplify-api
         image: yumekiti/marplify-api:latest
