--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,18 +30,38 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      id: build-and-push-image
-      run: |
-        directories=("api" "web")
+    - name: Build and push Docker image for api
+      uses: docker/build-push-action@v2
+      with:
+        context: ./api
+        push: true
+        file: ./api/Dockerfile
+        platforms: linux/arm64
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+        tags: yumekiti/marplify-api:$(git -C api rev-parse --short HEAD)
 
-        for directory in "${directories[@]}"; do
-          cd $directory
-          DOCKER_TAG=$(git rev-parse --short HEAD)
-          docker buildx build --tag yumekiti/marplify-$directory:${DOCKER_TAG} --file Dockerfile --platform linux/arm64 --cache-from=/tmp/.buildx-cache --push .
-          cd ..
-          sed -i "s/yumekiti\/marplify-$directory:.*/yumekiti\/marplify-$directory:${DOCKER_TAG}/" .argocd/deployment.yaml
-        done
+    - name: Update deployment.yaml for api
+      run: sed -i "s/yumekiti\/marplify-api:.*/yumekiti\/marplify-api:$(git -C api rev-parse --short HEAD)/" .argocd/deployment.yaml
+
+    - name: Build and push Docker image for web
+      uses: docker/build-push-action@v2
+      with:
+        context: ./web
+        push: true
+        file: ./web/Dockerfile
+        platforms: linux/arm64
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+        tags: yumekiti/marplify-web:$(git -C web rev-parse --short HEAD)
+
+    - name: Update deployment.yaml for web
+      run: sed -i "s/yumekiti\/marplify-web:.*/yumekiti\/marplify-web:$(git -C web rev-parse --short HEAD)/" .argocd/deployment.yaml
+
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
     - name: Commit and push changes to deploy branch
       run: |
