fix: update Dockerfile and docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - '8080:3000'
     command: >
       sh -c "
-        yarn build &&
-        yarn start
+        yarn build ; yarn &&
+        yarn build ; yarn start
       "
     depends_on:
       - db
