--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Get git commit short hash for api
-        id: get-api-commit
-        run: echo "::set-output name=commit_hash::$(git -C api rev-parse --short HEAD)"
+      - name: Get git commit short hash
+        id: get-commit
+        run: echo "::set-output name=commit_hash::$(git rev-parse --short HEAD)"
 
       - name: Build and push Docker image for api
         uses: docker/build-push-action@v2
@@ -51,15 +51,11 @@ jobs:
           platforms: linux/arm64
           cache-from: type=local,src=/tmp/.buildx-cache-api
           cache-to: type=local,dest=/tmp/.buildx-cache-api-new
-          tags: yumekiti/marplify-api:${{ steps.get-api-commit.outputs.commit_hash }}
+          tags: yumekiti/marplify-api:${{ steps.get-commit.outputs.commit_hash }}
 
       - name: Update deployment.yaml for api
         run: |
-          sed -i "s/yumekiti\/marplify-api:.*/yumekiti\/marplify-api:${{ steps.get-api-commit.outputs.commit_hash }}/" .argocd/deployment.yaml
-
-      - name: Get git commit short hash for web
-        id: get-web-commit
-        run: echo "::set-output name=commit_hash::$(git -C web rev-parse --short HEAD)"
+          sed -i "s/yumekiti\/marplify-api:.*/yumekiti\/marplify-api:${{ steps.get-commit.outputs.commit_hash }}/" .argocd/deployment.yaml
 
       - name: Build and push Docker image for web
         uses: docker/build-push-action@v2
@@ -70,11 +66,11 @@ jobs:
           platforms: linux/arm64
           cache-from: type=local,src=/tmp/.buildx-cache-web
           cache-to: type=local,dest=/tmp/.buildx-cache-web-new
-          tags: yumekiti/marplify-web:${{ steps.get-web-commit.outputs.commit_hash }}
+          tags: yumekiti/marplify-web:${{ steps.get-commit.outputs.commit_hash }}
 
       - name: Update deployment.yaml for web
         run: |
-          sed -i "s/yumekiti\/marplify-web:.*/yumekiti\/marplify-web:${{ steps.get-web-commit.outputs.commit_hash }}/" .argocd/deployment.yaml
+          sed -i "s/yumekiti\/marplify-web:.*/yumekiti\/marplify-web:${{ steps.get-commit.outputs.commit_hash }}/" .argocd/deployment.yaml
 
       - name: Move cache
         run: |
