--- a/.argocd/deployment.yaml
+++ b/.argocd/deployment.yaml
@@ -35,6 +35,10 @@ spec:
       labels:
         app: api
     spec:
+      initContainers:
+      - name: prisma-init
+        image: yumekiti/marplify-api:a148489
+        command: ["yarn", "keystone", "prisma", "migrate", "deploy"]
       containers:
       - name: marplify-api
         image: yumekiti/marplify-api:a148489
