--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@marp-team/marp-core": "^3.9.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@uiw/react-md-editor": "^3.25.6",
+    "mermaid": "^10.6.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +37,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-node-polyfills": "^0.16.0"
   }
 }
