--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 
 services:
-  app:
+  web:
     image: node:18.18.2-alpine
     working_dir: /app
     volumes:
-      - .:/app
+      - ./web:/app
     ports:
       - '3000:5173'
     command: >
