fix: update build workflow to include installing dependencies and building in web directory

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,5 +25,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: yarn install --frozen-lockfile
-    - run: yarn build
+    - name: Install dependencies and build
+      run: |
+        cd web
+        yarn install --frozen-lockfile
+        yarn build
