--- a/.argocd/ingress.yaml
+++ b/.argocd/ingress.yaml
@@ -16,13 +16,10 @@ spec:
                 name: web
                 port:
                   number: 80
-    - host: marplify-api.yumekiti.net
-      http:
-        paths:
-          - path: /
+          - path: /api
             pathType: Prefix
             backend:
               service:
                 name: api
                 port:
-                  number: 3000
+                  number: 8080
