--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
 version: '3'
 
 services:
+  nginx:
+    image: nginx:1.21-alpine
+    ports:
+      - '8080:80'
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - web
+      - api
   web:
     image: node:18.18.2-alpine
     working_dir: /app
     volumes:
       - ./web:/app
-    ports:
-      - '3000:5173'
     command: >
       sh -c "
         yarn &&
@@ -18,8 +25,6 @@ services:
       context: ./api
     volumes:
       - ./api:/go/src/app
-    ports:
-      - 8080:8080
     depends_on:
       - db
   db:
