--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,8 @@ server {
   # web
   location / {
     proxy_set_header Host $host;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
     proxy_pass http://web:5173;
   }
 
