feat: update slides func

--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,8 @@
     "react-use": "^17.4.0",
     "rehype-raw": "^7.0.0",
     "remark-emoji": "^4.0.1",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
