--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@marp-team/marp-core": "^3.9.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@uiw/react-md-editor": "^3.25.6",
